set(ICONS default.png emblem-archlinux.png emblem-bsd.png emblem-gentoo.png folder-drag-accept.png folder-open.png folder.png rodent_logo.png run.png system-file-manager.png system-run.png text-html.png text-x-generic.png user-home.png utilities-terminal.png window-close.png window-new.png x-office-document.png x-office-presentation.png x-office-spreadsheet.png)
INSTALL(FILES  ${ICONS}  DESTINATION share/icons/xffm+/48x48)         

