set(ICONS run.png application-exit.png applications-graphics.png default.png error.png information.png password.png question.png warning.png document-new.png document-properties.png document-revert.png document-save.png edit-clear-all.png edit-clear.png edit-copy.png edit-cut.png edit-delete.png edit-find.png edit-paste.png emblem-archlinux.png emblem-bsd.png emblem-documents.png emblem-gentoo.png emblem-important.png bluefolder-drag-accept.png bluefolder-open.png bluefolder.png home.png jump.png previous.png up.png help-about.png insert-object.png list-add-symbolic.symbolic.png list-add.png list-remove.png open-menu-symbolic.symbolic.png rodent_logo.png system-file-manager.png gears.png text-html.png text-x-generic.png user-home.png utilities-terminal.png window-close.png window-new.png x-office-document.png x-office-presentation.png x-office-spreadsheet.png process-stop.png)
INSTALL(FILES  ${ICONS}  DESTINATION share/icons/xffm+/48x48)         

