set(ICONS default.svg delete.svg differences.svg edit-clear.svg emblem-about.svg emblem-archlinux.svg emblem-blueball.svg emblem-bsd.svg emblem-cancel.svg emblem-gentoo.svg emblem-greenball.svg emblem-keyhole.svg emblem-lock.svg emblem-nfs.svg emblem-redball.svg emblem-smb.svg emblem-socket.svg emblem-ssh.svg emblem-synchronized.svg emblem-unreadable.svg go-next.svg grayball.svg list-add.svg list-remove.svg run.svg window-close.svg)
INSTALL(FILES  ${ICONS}  DESTINATION share/icons/xffm+/scalable)

