set(ICONS application-x-executable.svg computer.svg default.svg differences.svg drive-harddisk.svg emblem-about.svg emblem-archlinux.svg emblem-blueball.svg emblem-bsd.svg emblem-favorite.svg emblem-gentoo.svg emblem-greenball.svg emblem-keyhole.svg emblem-redball.svg emblem-symbolic-link.svg emblem-synchronized.svg folder.svg grayball.svg image-x-generic.svg inode-directory.svg list-add.svg list-remove.svg package-x-generic.svg run.svg text-html.svg text-x-generic.svg text-x-script.svg user-home.svg user-trash-full.svg user-trash.svg video-display.svg video-x-generic.svg x-office-document.svg x-office-document-template.svg x-office-drawing.svg x-office-presentation.svg x-office-spreadsheet.svg x-office-spreadsheet-template.svg x-package-repository.svg )
INSTALL(FILES  ${ICONS}  DESTINATION share/icons/xffm+/scalable)

