
SUBDIRS = scalable 
DIST_SUBDIRS = scalable 

#SUBDIRS = 48x48 scalable
#DIST_SUBDIRS = 48x48 scalable

#specfile = rodent-icon-theme.spec
indexdir = $(datadir)/icons/Rodent
index_DATA = index.theme

EXTRA_DIST= $(index_DATA)   install-sh INSTALL ChangeLog
#EXTRA_DIST= $(index_DATA) $(specfile) install-sh 


