SUBDIRS =  \
    emblems \
    actions \
    apps \
    devices \
    places \
    status \
    mimetypes \
    categories   \
    emotes    \
    stock
 
DIST_SUBDIRS =  \
    emblems \
    actions \
    apps \
    devices \
    places \
    status \
    mimetypes \
    categories   \
    emotes    \
    stock

