set(ICONS application-exit.png applications-graphics.png bluefolder-drag-accept.png bluefolder-open.png bluefolder.png closeTab.png default.png document-new.png document-properties.png document-revert.png document-save.png edit-clear-all.png edit-clear.png edit-copy.png edit-cut.png edit-delete.png edit-find.png edit-paste.png emblem-archlinux.png emblem-bsd.png emblem-documents.png emblem-gentoo.png emblem-important.png error.png gears.png help-about.png home.png information.png insert-object.png jump.png list-add.png list-remove.png menuTab.png newTab.png password.png previous.png process-stop.png question.png rodent_logo.png run.png system-file-manager.png text-html.png text-x-generic.png up.png user-home.png utilities-terminal.png warning.png window-close.png window-new.png x-office-document.png x-office-presentation.png x-office-spreadsheet.png)
INSTALL(FILES  ${ICONS}  DESTINATION share/icons/xffm+/48x48)         

