set(ICONS emblem-about.svg
emblem-go-up.svg
emblem-usb.svg
emblem-add.svg
emblem-remove.svg
emblem-delete.svg
emblem-p.svg
emblem-c.svg
emblem-cc.svg
emblem-i.svg
emblem-h.svg
emblem-hh.svg
emblem-f.svg
emblem-o.svg
emblem-m.svg
emblem-descending.svg
emblem-tty.svg
emblem-home.svg
emblem-go-home.svg
emblem-clear.svg
emblem-error.svg
emblem-warning.svg
emblem-question.svg
emblem-archlinux.svg
emblem-bak.svg
emblem-blockdevice.svg
emblem-blowfish.svg
emblem-blueball.svg
emblem-bookmark.svg
emblem-broken.svg
emblem-chardevice.svg
emblem-color.svg
emblem-core.svg
emblem-disk.svg
emblem-documents.svg
emblem-edit.svg
emblem-exec.svg
emblem-exit.svg
emblem-favourite.svg
emblem-find.svg
emblem-flash.svg
emblem-floppy.svg
emblem-folder.svg
emblem-gentoo.svg
emblem-graphics.svg
emblem-grayball.svg
emblem-greenball.svg
emblem-harddisk.svg
emblem-important.svg
emblem-invert.svg
emblem-keyhole.svg
emblem-link.svg
emblem-lock.svg
emblem-math.svg
emblem-msoffice.svg
emblem-music.svg
emblem-network.svg
emblem-nfs.svg
emblem-noaccess.svg
emblem-notes.svg
emblem-oo.svg
emblem-compressed.svg
emblem-pdf.svg
emblem-photos.svg
emblem-preferences.svg
emblem-readonly.svg
emblem-redball.svg
emblem-rodent.svg
emblem-run.svg
emblem-science.svg
emblem-script.svg
emblem-select-all.svg
emblem-select-none.svg
emblem-shared.svg
emblem-show-hidden.svg
emblem-smb.svg
emblem-socket.svg
emblem-speaker.svg
emblem-spreadsheet.svg
emblem-star.svg
emblem-start-here.svg
emblem-symbolic-link.svg
emblem-synchronized.svg
emblem-terminal.svg
emblem-text.svg
emblem-toggle.svg
emblem-unreadable.svg
emblem-user.svg
emblem-video.svg
emblem-wait.svg
emblem-write-ok.svg
emblem-www.svg
emblem-cut.svg
emblem-copy.svg
emblem-paste.svg
xf-go-next.svg
xf-go-previous.svg
xf-go-to.svg)
INSTALL(FILES  ${ICONS}  DESTINATION share/icons/hicolor/scalable/emblems)

