set(ICONS edit-clear.svg        go-jump.svg        select-color.svg
delete.svg                 edit-copy.svg         go-last.svg        strikethrough.svg
dialog-authentication.svg  edit-cut.svg          go-next.svg        video-display.svg
dialog-info.svg            edit-find.svg         go-previous.svg    view-refresh.svg
dialog-question.svg        edit-paste.svg        go-top.svg         view-sort-ascending.svg
dialog-warning.svg         edit-undo.svg         go-up.svg          view-sort-descending.svg
display.svg                file.svg              index.svg          window-close.svg
dnd-multiple.svg           folder.svg            list-add.svg       zoom-fit-best.svg
dnd.svg                    format-text-bold.svg  list-remove.svg    zoom-in.svg
document-new.svg           go-bottom.svg         ok.svg             zoom-original.svg
document-open.svg          go-down.svg           process-reset.svg  zoom-out.svg
document-save-as.svg       go-first.svg          properties.svg     zoom-page-height.svg
document-save.svg          go-home.svg           properties.svg~    zoom-page-width.svg
)
INSTALL(FILES  ${ICONS}  DESTINATION share/icons/hicolor/scalable/stock)

